[gd_scene load_steps=19 format=3 uid="uid://70rfm7bfy2cc"]

[ext_resource type="PackedScene" path="res://UserInterface/SoundMenu/SoundMenu.tscn" id="1"]
[ext_resource type="Script" path="res://UserInterface/MainMenu/MainMenu.gd" id="2"]
[ext_resource type="PackedScene" path="res://UserInterface/PauseMenu/input_menu/InputMenu.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dte0wfqgb2tvr" path="res://Levels/Funicular lift/Funicular Backgrond/Funicular Background.png" id="4"]
[ext_resource type="FontFile" uid="uid://c7hmcjmdp0qpl" path="res://UserInterface/Fonts/Maler.ttf" id="5"]
[ext_resource type="AudioStream" uid="uid://chqaxg6iy1pvy" path="res://Levels/FirstLevel/Dream Culture.mp3" id="6"]
[ext_resource type="PackedScene" path="res://UserInterface/MoreMenu/MoreMenu.tscn" id="7"]
[ext_resource type="Script" path="res://UserInterface/MoreMenu/MoreMenu.gd" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/glyphs/0/advance = Vector2(0, 0)
cache/0/16/0/glyphs/0/offset = Vector2(0, 0)
cache/0/16/0/glyphs/0/size = Vector2(0, 0)
cache/0/16/0/glyphs/0/uv_rect = Rect2(0, 0, 0, 0)
cache/0/16/0/glyphs/0/texture_idx = -1
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="2"]
default_font = SubResource("1")

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxFlat" id="14"]
bg_color = Color(0.980392, 0.631373, 0.968627, 1)

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="StyleBoxFlat" id="13"]
bg_color = Color(0.980392, 0.631373, 0.968627, 1)

[sub_resource type="StyleBoxFlat" id="15"]
bg_color = Color(0.980392, 0.631373, 0.968627, 0.509804)

[sub_resource type="StyleBoxEmpty" id="12"]

[sub_resource type="Theme" id="5"]
ItemList/colors/font_color = Color(0.937255, 0.890196, 0.929412, 1)
ItemList/colors/font_color_selected = Color(1, 1, 1, 1)
ItemList/fonts/font = SubResource("6")
ItemList/styles/bg = SubResource("7")
ItemList/styles/cursor = SubResource("14")
ItemList/styles/cursor_unfocused = SubResource("10")
ItemList/styles/focus = SubResource("13")
ItemList/styles/selected = SubResource("15")
ItemList/styles/selected_focus = SubResource("12")

[node name="MainMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
script = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 4800.0
offset_bottom = 2700.0
scale = Vector2(0.400265, 0.400265)
texture = ExtResource("4")
flip_h = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 86.0
offset_right = 1379.0
offset_bottom = 296.0
theme = SubResource("2")
text = "SWEET DREAM	"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 328.0
offset_right = 538.0
offset_bottom = 929.0
theme = SubResource("5")
auto_height = true
item_count = 3
item_0/text = "Play"
item_1/text = "Settings"
item_2/text = "Exit"

[node name="LevelTransition" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)

[node name="InputMenu" parent="." instance=ExtResource("3")]
visible = false
anchors_preset = 0

[node name="SoundMenu" parent="." instance=ExtResource("1")]
visible = false
anchors_preset = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
autoplay = true
bus = &"Music"

[node name="MoreMenu" parent="." instance=ExtResource("7")]
visible = false
anchors_preset = 0
script = ExtResource("8")
